# reservation

./: .env  .pre-commit-config.yaml  .tokeignore  Cargo.toml  README.md  _typos.toml  deny.toml
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: config.rs  error.rs  lib.rs  pager.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: mod.rs  reservation.rs
abi/src/types/: mod.rs  request.rs  reservation.rs  reservation_filter.rs  reservation_query.rs  reservation_status.rs
migrations/: 20221008222343_init.down.sql  20221008222343_init.up.sql  20221008223218_reservation.down.sql  20221008223218_reservation.up.sql  20221008223416_reservation_trigger.down.sql  20221008223416_reservation_trigger.up.sql  20221008223549_reservation_func.down.sql  20221008223549_reservation_func.up.sql
reservation/: Cargo.toml
reservation/examples/: listen.rs
reservation/fixtures/: .gitignore
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 0001-core-reservation.md  template.md
service/: Cargo.toml
service/fixtures/: config.yml
service/src/: lib.rs  main.rs  service.rs  test_utils.rs
service/tests/: service.rs
