[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
prost = "0.11.0"
prost-types = "0.11.1"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tonic = { version = "0.8.2", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.8.2"
