[package]
name = "reservation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.58"
chrono = { version = "0.4.22", features = ["serde"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.24.2", features = ["sync"] }
futures = { version = "0.3.25", default-features = false }
tracing = "0.1.37"
tokio-stream = "0.1.11"

[dev-dependencies]
dotenvy = "0.15.6"
prost-types = "0.11.1"
sqlx-db-tester = "0.1.1"
tokio = { version = "1.24.2", features = ["full"] }
